search and apply tution fee issue in apply modal and horizontal scrolling style issue fixed

--- a/src/views/SMS/SearchAndApply/SearchAndApply.css
+++ b/src/views/SMS/SearchAndApply/SearchAndApply.css
@@ -764,7 +764,7 @@
 }
 
 .apply-modal-study {
-  width: 75%;
+  width: 85%;
   display: flex;
   justify-content: space-between;
 }
@@ -1056,6 +1056,7 @@ input[type="checkbox"] {
     background: #fff;
   } */
   .apply-modal-study {
+    flex-direction: column;
     width: 100%;
     flex-wrap: nowrap;
   }
@@ -1173,7 +1174,7 @@ span.visually-hidden {
   background: none;
   padding: 8px 0px;
 }
-.scroll-arrow {
+.scroll-arrow-compare {
   position: fixed;
   top: 50%;
   transform: translateY(-50%);
@@ -1187,24 +1188,24 @@ span.visually-hidden {
   display: block;
 }
 
-.scroll-right {
+.scroll-right-compare {
   right: 10px;
 }
 
-.scroll-left {
+.scroll-left-compare {
   left: 250px;
 }
 
-.scroll-arrow.hover-only {
+.scroll-arrow-compare.hover-only-compare {
   opacity: 0;
   transition: opacity 0.3s ease;
 }
 
-.table-responsive-wrapper:hover .scroll-arrow.hover-only {
+.table-responsive-wrapper:hover .scroll-arrow-compare.hover-only-compare {
   opacity: 0.9;
 }
 
-.scroll-arrow:hover {
+.scroll-arrow-compare:hover {
   opacity: 1 !important;
 }
 
